# insights-engine

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt  test_connection.py
.claude/commands/: add-init.md
.github/workflows/: ci.yml
app/: config.py  context.py  main.py
app/auth/: jwks.py
app/db/: client.py
app/models/: schemas.py
app/routes/: ai.py  deps.py  emails.py  insights.py
app/services/: ai_service.py  email_service.py  insights_engine.py
app/services/prompts/: insights_system.md
docs/superpowers/followups/: 2026-04-14-compute-goal-progress-logic.md  2026-04-14-delete-insight-period.md  2026-04-14-plan-typo-test-3m.md  README.md  (+5 more)
scripts/: dev.sh  dev_token.py
supabase/: config.toml
supabase/migrations/: 20260110044241_get_budgets_with_progress.sql  20260313_create_debt_tables.sql  20260321_add_budget_id_to_transactions.sql  20260322_rewrite_get_budgets_with_progress.sql  20260323_add_amount_to_budgets.sql  20260324120000_electric_user_grants.sql  20260324130000_get_budgets_overview.sql  20260325_fix_budget_rpc_user_id.sql  20260330_auto_assign_budget_trigger.sql  20260401223244_filter_transactions_by_budget.sql  20260402_rename_budget_items_to_allocations.sql  20260409205443_savings_goals_integration.sql  20260430045109_create_account_delete_tables.sql  20260430052013_account_deletion_audit_and_webhooks.sql  20260430072132_qualify_digest_in_delete_user_data.sql
tests/: conftest.py  test_deps.py  test_insights_engine.py  test_insights_route.py
(+23 files in other folders)
