[project]
name = "insights-engine"
version = "0.1.0"
requires-python = ">=3.13"

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP", "SIM", "RUF"]
# Ambiguous-unicode warnings on string literals: we deliberately use
# typographic characters (×, –) in user-facing messages and tests that
# assert them. Re-enable if you adopt ASCII-only message strings.
ignore = ["RUF001", "RUF002"]

[tool.ruff.lint.isort]
# Disambiguate the `supabase` PyPI package from our local supabase/ directory
# (which holds migrations + config). Without this, ruff's first-party heuristic
# misclassifies `from supabase import ...` as a local import.
known-third-party = ["supabase"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
